--- a/joosik/src/main/resources/application.properties
+++ b/joosik/src/main/resources/application.properties
@@ -15,4 +15,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # application.properties #아래는 동수씨컴퓨터와 연동을 위해서 일시적으로 보안을 취소
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
